SE AGREGO ALTA DE GRUPO CON PERMISOS

--- a/SGF.DATOS/SGF.DATOS.csproj
+++ b/SGF.DATOS/SGF.DATOS.csproj
@@ -44,9 +44,11 @@
   <ItemGroup>
     <Compile Include="ConexionSGF.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Seguridad\AccionDAO.cs" />
     <Compile Include="Seguridad\AuditoriaDAO.cs" />
     <Compile Include="Seguridad\GrupoDAO.cs" />
     <Compile Include="Seguridad\ModuloDAO.cs" />
+    <Compile Include="Seguridad\PermisoDAO.cs" />
     <Compile Include="Seguridad\UsuarioDAO.cs" />
   </ItemGroup>
   <ItemGroup>
