--- a/SGF.MODELO/SGF.MODELO.csproj
+++ b/SGF.MODELO/SGF.MODELO.csproj
@@ -43,6 +43,9 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Seguridad\Auditoria.cs" />
+    <Compile Include="Seguridad\Composite\Componente.cs" />
+    <Compile Include="Seguridad\Composite\Composite.cs" />
+    <Compile Include="Seguridad\Composite\Hoja.cs" />
     <Compile Include="Seguridad\Grupo.cs" />
     <Compile Include="Seguridad\Modulo.cs" />
     <Compile Include="Seguridad\Accion.cs" />
