--- a/SGF.NEGOCIO/SGF.NEGOCIO.csproj
+++ b/SGF.NEGOCIO/SGF.NEGOCIO.csproj
@@ -44,9 +44,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CorreoService.cs" />
+    <Compile Include="Seguridad\AccionBLL.cs" />
     <Compile Include="Seguridad\AuditoriaBLL.cs" />
     <Compile Include="Seguridad\GrupoBLL.cs" />
     <Compile Include="Seguridad\ModuloBLL.cs" />
+    <Compile Include="Seguridad\PermisoBLL.cs" />
     <Compile Include="Seguridad\SesionBLL.cs" />
     <Compile Include="Seguridad\UsuarioBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
