--- a/SGF.MODELO/SGF.MODELO.csproj
+++ b/SGF.MODELO/SGF.MODELO.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Operacion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Seguridad\Auditoria.cs" />
     <Compile Include="Seguridad\Composite\Componente.cs" />
