--- a/SGF.DATOS/SGF.DATOS.csproj
+++ b/SGF.DATOS/SGF.DATOS.csproj
@@ -43,6 +43,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConexionSGF.cs" />
+    <Compile Include="Negocio\CategoriaDAO.cs" />
+    <Compile Include="Negocio\ProductoDAO.cs" />
+    <Compile Include="Negocio\ProveedorDAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Seguridad\AccionDAO.cs" />
     <Compile Include="Seguridad\AuditoriaDAO.cs" />
@@ -57,5 +60,6 @@
       <Name>SGF.MODELO</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
