--- a/SGF.MODELO/SGF.MODELO.csproj
+++ b/SGF.MODELO/SGF.MODELO.csproj
@@ -41,6 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Negocio\Categoria.cs" />
+    <Compile Include="Negocio\Cliente.cs" />
+    <Compile Include="Negocio\Producto.cs" />
+    <Compile Include="Negocio\Proveedor.cs" />
+    <Compile Include="Negocio\TipoCliente.cs" />
     <Compile Include="Operacion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Seguridad\Auditoria.cs" />
@@ -54,5 +59,6 @@
     <Compile Include="Seguridad\Sesion.cs" />
     <Compile Include="Seguridad\Usuario.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
