--- a/SGF.MODELO/SGF.MODELO.csproj
+++ b/SGF.MODELO/SGF.MODELO.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Negocio\Cliente.cs" />
     <Compile Include="Negocio\Producto.cs" />
     <Compile Include="Negocio\Proveedor.cs" />
+    <Compile Include="Negocio\Registro.cs" />
     <Compile Include="Negocio\TipoCliente.cs" />
     <Compile Include="Operacion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
