--- a/SGF.PRESENTACION/SGF.PRESENTACION.csproj
+++ b/SGF.PRESENTACION/SGF.PRESENTACION.csproj
@@ -141,6 +141,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>FarmaciaDatosDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="formModales\formImportar\mdImportarProductos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="formModales\formImportar\mdImportarProductos.Designer.cs">
+      <DependentUpon>mdImportarProductos.cs</DependentUpon>
+    </Compile>
     <Compile Include="formModales\mdAjustes.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -269,6 +275,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UtilidadesComunes\UtilidadesUI.cs" />
+    <EmbeddedResource Include="formModales\formImportar\mdImportarProductos.resx">
+      <DependentUpon>mdImportarProductos.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="formModales\mdAjustes.resx">
       <DependentUpon>mdAjustes.cs</DependentUpon>
     </EmbeddedResource>
