--- a/SGF.PRESENTACION/packages.config
+++ b/SGF.PRESENTACION/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="ClosedXML" version="0.102.1" targetFramework="net472" />
   <package id="DocumentFormat.OpenXml" version="2.16.0" targetFramework="net472" />
+  <package id="ExcelDataReader" version="3.6.0" targetFramework="net472" />
+  <package id="ExcelDataReader.DataSet" version="3.6.0" targetFramework="net472" />
   <package id="ExcelNumberFormat" version="1.1.0" targetFramework="net472" />
   <package id="FontAwesome.Sharp" version="6.3.0" targetFramework="net472" />
   <package id="FontAwesome.Sharp.Pro" version="6.3.0" targetFramework="net472" />
