--- a/SGF.MODELO/SGF.MODELO.csproj
+++ b/SGF.MODELO/SGF.MODELO.csproj
@@ -45,6 +45,9 @@
     <Compile Include="Negocio\Cliente.cs" />
     <Compile Include="Negocio\Compra.cs" />
     <Compile Include="Negocio\DetalleCompra.cs" />
+    <Compile Include="Negocio\Impuesto.cs" />
+    <Compile Include="Negocio\Moneda.cs" />
+    <Compile Include="Negocio\NegocioModelo.cs" />
     <Compile Include="Negocio\Producto.cs" />
     <Compile Include="Negocio\Proveedor.cs" />
     <Compile Include="Negocio\Registro.cs" />
