--- a/SGF.PRESENTACION/App.config
+++ b/SGF.PRESENTACION/App.config
@@ -8,6 +8,7 @@
   <connectionStrings>
     <add name="cadena_conexion" connectionString="Data Source=(local);Initial Catalog=FarmaciaDatos;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="SGF.PRESENTACION.Properties.Settings.FarmaciaDatosConexionTableAdapter" connectionString="Data Source=localhost;Initial Catalog=FarmaciaDatos;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="SGF.PRESENTACION.Properties.Settings.ConexDataTable" connectionString="Data Source=localhost;Initial Catalog=FarmaciaDatos;User ID=Javier12301;Password=Reloj12301;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="Email" value="Robot.SGF@outlook.com" />
