--- a/SGF.PRESENTACION/SGF.PRESENTACION.csproj
+++ b/SGF.PRESENTACION/SGF.PRESENTACION.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BouncyCastle.Crypto, Version=1.8.9.0, Culture=neutral, PublicKeyToken=0e99375e54769942">
+      <HintPath>..\frmLogin\packages\BouncyCastle.1.8.9\lib\BouncyCastle.Crypto.dll</HintPath>
+    </Reference>
     <Reference Include="ClosedXML, Version=0.102.1.0, Culture=neutral, PublicKeyToken=fd1eb21b62ae805b, processorArchitecture=MSIL">
       <HintPath>..\frmLogin\packages\ClosedXML.0.102.1\lib\netstandard2.0\ClosedXML.dll</HintPath>
     </Reference>
@@ -56,6 +59,12 @@
     </Reference>
     <Reference Include="Irony, Version=1.0.11.0, Culture=neutral, PublicKeyToken=ca48ace7223ead47, processorArchitecture=MSIL">
       <HintPath>..\frmLogin\packages\Irony.NetCore.1.0.11\lib\net461\Irony.dll</HintPath>
+    </Reference>
+    <Reference Include="itextsharp, Version=5.5.13.3, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
+      <HintPath>..\frmLogin\packages\iTextSharp.5.5.13.3\lib\itextsharp.dll</HintPath>
+    </Reference>
+    <Reference Include="itextsharp.xmlworker, Version=5.5.13.3, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
+      <HintPath>..\frmLogin\packages\itextsharp.xmlworker.5.5.13.3\lib\itextsharp.xmlworker.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="PresentationCore" />
@@ -166,10 +175,22 @@
     <Compile Include="formModales\mdCategorias.Designer.cs">
       <DependentUpon>mdCategorias.cs</DependentUpon>
     </Compile>
-    <Compile Include="formModales\mdEntradaInventario.cs">
+    <Compile Include="formModales\Entrada inventario\mdCompraProducto.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="formModales\mdEntradaInventario.Designer.cs">
+    <Compile Include="formModales\Entrada inventario\mdCompraProducto.Designer.cs">
+      <DependentUpon>mdCompraProducto.cs</DependentUpon>
+    </Compile>
+    <Compile Include="formModales\Entrada inventario\mdDetalleCompraEntrada.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="formModales\Entrada inventario\mdDetalleCompraEntrada.Designer.cs">
+      <DependentUpon>mdDetalleCompraEntrada.cs</DependentUpon>
+    </Compile>
+    <Compile Include="formModales\Entrada inventario\mdEntradaInventario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="formModales\Entrada inventario\mdEntradaInventario.Designer.cs">
       <DependentUpon>mdEntradaInventario.cs</DependentUpon>
     </Compile>
     <Compile Include="formModales\mdGrupo.cs">
@@ -177,6 +198,12 @@
     </Compile>
     <Compile Include="formModales\mdGrupo.Designer.cs">
       <DependentUpon>mdGrupo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="formModales\mdMoneda.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="formModales\mdMoneda.Designer.cs">
+      <DependentUpon>mdMoneda.cs</DependentUpon>
     </Compile>
     <Compile Include="formModales\mdProductos.cs">
       <SubType>Form</SubType>
@@ -190,10 +217,10 @@
     <Compile Include="formModales\mdProveedores.Designer.cs">
       <DependentUpon>mdProveedores.cs</DependentUpon>
     </Compile>
-    <Compile Include="formModales\mdRegistrarCompra.cs">
+    <Compile Include="formModales\Entrada inventario\mdRegistrarCompra.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="formModales\mdRegistrarCompra.Designer.cs">
+    <Compile Include="formModales\Entrada inventario\mdRegistrarCompra.Designer.cs">
       <DependentUpon>mdRegistrarCompra.cs</DependentUpon>
     </Compile>
     <Compile Include="formModales\mdUsuario.cs">
@@ -201,6 +228,18 @@
     </Compile>
     <Compile Include="formModales\mdUsuario.Designer.cs">
       <DependentUpon>mdUsuario.cs</DependentUpon>
+    </Compile>
+    <Compile Include="formModales\modalesBuscadores\mdBuscarMoneda.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="formModales\modalesBuscadores\mdBuscarMoneda.Designer.cs">
+      <DependentUpon>mdBuscarMoneda.cs</DependentUpon>
+    </Compile>
+    <Compile Include="formModales\modalesBuscadores\mdBuscarProducto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="formModales\modalesBuscadores\mdBuscarProducto.Designer.cs">
+      <DependentUpon>mdBuscarProducto.cs</DependentUpon>
     </Compile>
     <Compile Include="formModales\Seguridad\formConfirmarContraseña.cs">
       <SubType>Form</SubType>
@@ -237,6 +276,12 @@
     </Compile>
     <Compile Include="formPrincipales\formMain.Designer.cs">
       <DependentUpon>formMain.cs</DependentUpon>
+    </Compile>
+    <Compile Include="formPrincipales\formNegocio.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="formPrincipales\formNegocio.Designer.cs">
+      <DependentUpon>formNegocio.cs</DependentUpon>
     </Compile>
     <Compile Include="formPrincipales\formProductos.cs">
       <SubType>Form</SubType>
@@ -298,6 +343,9 @@
     <Compile Include="formModales\Seguridad\formVerificarMail.Designer.cs">
       <DependentUpon>formVerificarMail.cs</DependentUpon>
     </Compile>
+    <Compile Include="Negocio.cs">
+      <DependentUpon>Negocio.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Negocio.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -316,11 +364,20 @@
     <EmbeddedResource Include="formModales\mdCategorias.resx">
       <DependentUpon>mdCategorias.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="formModales\mdEntradaInventario.resx">
+    <EmbeddedResource Include="formModales\Entrada inventario\mdCompraProducto.resx">
+      <DependentUpon>mdCompraProducto.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="formModales\Entrada inventario\mdDetalleCompraEntrada.resx">
+      <DependentUpon>mdDetalleCompraEntrada.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="formModales\Entrada inventario\mdEntradaInventario.resx">
       <DependentUpon>mdEntradaInventario.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="formModales\mdGrupo.resx">
       <DependentUpon>mdGrupo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="formModales\mdMoneda.resx">
+      <DependentUpon>mdMoneda.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="formModales\mdProductos.resx">
       <DependentUpon>mdProductos.cs</DependentUpon>
@@ -328,11 +385,17 @@
     <EmbeddedResource Include="formModales\mdProveedores.resx">
       <DependentUpon>mdProveedores.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="formModales\mdRegistrarCompra.resx">
+    <EmbeddedResource Include="formModales\Entrada inventario\mdRegistrarCompra.resx">
       <DependentUpon>mdRegistrarCompra.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="formModales\mdUsuario.resx">
       <DependentUpon>mdUsuario.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="formModales\modalesBuscadores\mdBuscarMoneda.resx">
+      <DependentUpon>mdBuscarMoneda.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="formModales\modalesBuscadores\mdBuscarProducto.resx">
+      <DependentUpon>mdBuscarProducto.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="formModales\Seguridad\formConfirmarContraseña.resx">
       <DependentUpon>formConfirmarContraseña.cs</DependentUpon>
@@ -351,6 +414,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="formPrincipales\formMain.resx">
       <DependentUpon>formMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="formPrincipales\formNegocio.resx">
+      <DependentUpon>formNegocio.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="formPrincipales\formProductos.resx">
       <DependentUpon>formProductos.cs</DependentUpon>
@@ -443,7 +509,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="formModales\modalesBuscadores\" />
+    <None Include="Recursos\Plantillas\plantillaDetalle_Compras.html" />
   </ItemGroup>
   <ItemGroup>
     <COMReference Include="Microsoft.Office.Core">
@@ -488,6 +554,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Recursos\Iconos Coloridos\eliminar-boton-15.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Recursos\Iconos Coloridos\farmaciaLogo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
