--- a/SGF.PRESENTACION/packages.config
+++ b/SGF.PRESENTACION/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BouncyCastle" version="1.8.9" targetFramework="net472" />
   <package id="ClosedXML" version="0.102.1" targetFramework="net472" />
   <package id="DocumentFormat.OpenXml" version="2.16.0" targetFramework="net472" />
   <package id="ExcelDataReader" version="3.6.0" targetFramework="net472" />
@@ -8,6 +9,8 @@
   <package id="FontAwesome.Sharp" version="6.3.0" targetFramework="net472" />
   <package id="FontAwesome.Sharp.Pro" version="6.3.0" targetFramework="net472" />
   <package id="Irony.NetCore" version="1.0.11" targetFramework="net472" />
+  <package id="iTextSharp" version="5.5.13.3" targetFramework="net472" />
+  <package id="itextsharp.xmlworker" version="5.5.13.3" targetFramework="net472" />
   <package id="SixLabors.Fonts" version="1.0.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
