--- a/SGF.DATOS/SGF.DATOS.csproj
+++ b/SGF.DATOS/SGF.DATOS.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Negocio\ProveedorDAO.cs" />
     <Compile Include="Negocio\RegistroDAO.cs" />
     <Compile Include="Negocio\SalidaInventarioDAO.cs" />
+    <Compile Include="Negocio\VentaDAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Seguridad\AccionDAO.cs" />
     <Compile Include="Seguridad\AuditoriaDAO.cs" />
