--- a/SGF.NEGOCIO/SGF.NEGOCIO.csproj
+++ b/SGF.NEGOCIO/SGF.NEGOCIO.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Negocio\ProveedorBLL.cs" />
     <Compile Include="Negocio\RegistroBLL.cs" />
     <Compile Include="Negocio\SalidaInventarioBLL.cs" />
+    <Compile Include="Negocio\VentaBLL.cs" />
     <Compile Include="Seguridad\AccionBLL.cs" />
     <Compile Include="Seguridad\AuditoriaBLL.cs" />
     <Compile Include="Seguridad\GrupoBLL.cs" />
