--- a/SGF.PRESENTACION/SGF.PRESENTACION.csproj
+++ b/SGF.PRESENTACION/SGF.PRESENTACION.csproj
@@ -235,6 +235,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>FarmaciaDatosDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="formModales\Buscadores\mdBuscarCliente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="formModales\Buscadores\mdBuscarCliente.Designer.cs">
+      <DependentUpon>mdBuscarCliente.cs</DependentUpon>
+    </Compile>
     <Compile Include="formModales\Importar\mdImportarProductos.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -366,6 +372,12 @@
     </Compile>
     <Compile Include="formModales\Seguridad\mdDetalleAuditoria.Designer.cs">
       <DependentUpon>mdDetalleAuditoria.cs</DependentUpon>
+    </Compile>
+    <Compile Include="formModales\Ventas\mdBuscarProductoVenta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="formModales\Ventas\mdBuscarProductoVenta.Designer.cs">
+      <DependentUpon>mdBuscarProductoVenta.cs</DependentUpon>
     </Compile>
     <Compile Include="formPrincipales\formClientes.cs">
       <SubType>Form</SubType>
@@ -519,6 +531,9 @@
     </Compile>
     <Compile Include="SqlServerTypes\Loader.cs" />
     <Compile Include="UtilidadesComunes\UtilidadesUI.cs" />
+    <EmbeddedResource Include="formModales\Buscadores\mdBuscarCliente.resx">
+      <DependentUpon>mdBuscarCliente.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="formModales\Importar\mdImportarProductos.resx">
       <DependentUpon>mdImportarProductos.cs</DependentUpon>
     </EmbeddedResource>
@@ -584,6 +599,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="formModales\Seguridad\mdDetalleAuditoria.resx">
       <DependentUpon>mdDetalleAuditoria.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="formModales\Ventas\mdBuscarProductoVenta.resx">
+      <DependentUpon>mdBuscarProductoVenta.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="formPrincipales\formClientes.resx">
       <DependentUpon>formClientes.cs</DependentUpon>
@@ -765,6 +783,10 @@
     <None Include="Recursos\Iconos Coloridos\cancelado_imagen.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Recursos\Iconos Coloridos\Aumentar-15.png" />
+    <None Include="Recursos\Iconos Coloridos\Decrementar-15.png" />
+    <None Include="Recursos\Iconos Coloridos\decrementar 15.png" />
+    <None Include="Recursos\Iconos Coloridos\Decrementar_15.png" />
     <Content Include="Recursos\Logo negocio\logo.png" />
     <Content Include="Recursos\Logo negocio\style.css" />
     <None Include="Recursos\Plantillas\Reportes\reporte_productos_mayor_stock.html" />
